fix alignment with Rats

--- a/static/css/styles-rats.css
+++ b/static/css/styles-rats.css
@@ -48,10 +48,16 @@ p {
 .card {
   background-color:rgb(224, 137, 6);
   padding: 10px;
-  margin: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 /* Style the buttons */
+button {
+  margin: 5px;
+}
+
 .btn {
   border: none;
   outline: none;
@@ -69,6 +75,10 @@ p {
 .btn.active {
   background-color: rgb(212, 79, 2);
   color: white;
+}
+
+#myBtnContainer {
+  align-self: center;
 }
 
 #rat_intro {
